src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #78C0E0;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

#page-container {
  position: relative;
  min-height: 100vh;
}

#content-wrap {
  padding-bottom: 35px;
}

/* Style header */

header {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  position: relative;
  align-items: center;
  background-color: #449DD1;
  width: 100%;
  top: 0;
  left: 0;
  border-bottom: solid #F9DC5C;
}

header nav ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  list-style: none;
  padding: 0 10px 0 10px;
}

header nav ul li a {
  padding: 0 10px 0 10px;
  font-weight: lighter;
  font-size: 24px;
  text-decoration: none;
  color: #28262C;
}

header nav ul li a:hover {
  padding: 0 10px 0 10px;
  font-weight: bold;
  font-size: 24px;
  text-decoration: none;
  color: #F9DC5C;
}

header h2 {
  font-weight: bold;
  font-size: 36px;
  color: #28262C;
  padding: 0 10px 0 10px;
}

/* Style About Me */
#about-me {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
}

#about-me img {
  width: auto;
  height: 800px; 
  display: block;
  margin: 10px 0 10px 30px;
  border: 5px solid #28262C;
  border-radius: 20px;
}

#about-me-text {
  display: flex;
  flex-direction: column;
  width: 1000px;
  padding: 0px 30px 0px 100px;
}

/* Style portfolio */
.portfolio {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 45px;
}

.proj {
  margin-top: 10px;
  max-width: 1162px;
  width: 100%;
  height: 551px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  border: 5px solid black;
  border-radius: 20px;
  position: relative;
}

.proj-link {
  margin-top: 10px;
  max-width: 1162px;
  width: 100%;
  height: 551px;
}

.proj-link a {
  display: block;
  margin-top: 10px;
  max-width: 1162px;
  width: 100%;
  height: 551px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.proj-description {
  background-color: rgba(2, 2, 2, 0.75 );
  color: white;
  width: fit-content;
  justify-content: center;
  position: absolute;
  top: 413px;
}

/* Style Contact */

/* Style Resume */

#resume {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#resume img {
  height: auto;
  width: 65vw;
  margin: 10px 0px 5px 0
}

#resume a {
  text-decoration: none;
  font-weight: lighter;
  color: #28262C;
}

#resume a:hover {
  text-decoration: none;
  font-weight: bold;
  color: #F9DC5C;
}

#resume h2 {
  margin: 5px 0 5px 0;
  color: #28262C;
}

#resume p {
  margin: 5px 0 10px 0;
  color: #28262C;
}

/* Style Footer */
#footer {
  position: absolute;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
  background-color: #449DD1;
  width: 100%;
  height: 35px;
  bottom: 0;
  border-top: solid #F9DC5C;
}

#footer a {
  padding: 0 10px 0 10px;
  font-weight: lighter;
  font-size: 24px;
  text-decoration: none;
  color: #28262C;
}

#footer a:hover {
  padding: 0 10px 0 10px;
  font-weight: lighter;
  font-size: 24px;
  text-decoration: none;
  color: #F9DC5C;
}

